# Unreleased (2.0.0)

## Breaking changes

* User name and email are now two different fields

## Updates

* Add support for new columns and rework others
* Add a foreign-table-level option for selecting the target branch
* Add support for lines added/deleted/files changed
* Add support for bare repositories

# Release 1.0.0

* Initial release