@@ -10,6 +10,7 @@
 * Add a foreign-table-level option for selecting the target branch
 * Add support for lines added/deleted/files changed
 * Add support for bare repositories
+* Add support for libgit2 up to v0.27
 
 # Release 1.0.0
 
